was bisher geschah: v2.1.4T3.3

--- a/core/src/main/assets/messages/actors/actors.properties
+++ b/core/src/main/assets/messages/actors/actors.properties
@@ -42,6 +42,9 @@ actors.blobs.waterofawareness.desc=Power of knowledge radiates from the water of
 actors.blobs.waterofhealth.procced=As you take a sip, you feel your wounds heal completely.
 actors.blobs.waterofhealth.desc=Power of health radiates from the water of this well. Take a sip from it to heal your wounds and satisfy hunger.
 
+actors.blobs.waterofenchantment.procced=As you take a sip, your equipment is enchanted.
+actors.blobs.waterofenchantment.desc=Power of enchantment radiates from the water of this well. Drinking this enchanted water will enchant your equipped items, and throwing a single item inside will grant it a more powerful enchantment.
+
 actors.blobs.wateroftransmutation.desc=Power of change radiates from the water of this well. Throw an item into the well to turn it into something else.
 
 actors.blobs.web.desc=A thick web is covering everything here. Anything that touches or is thrown through the web will break it, but will also be stuck in place.
@@ -556,7 +559,7 @@ actors.hero.heroclass.huntress_unlock=To unlock the Huntress _hit enemies with t
 
 actors.hero.heroclass.duelist=duelist
 actors.hero.heroclass.duelist_desc_short=The Duelist is a weapons master who can use her weapon to trigger a _special weapon ability._ This special ability is _different for every weapon._
-actors.hero.heroclass.duelist_desc=The Duelist starts with a _unique rapier_ with a special ability that recharges over time.\n\nEvery weapon in the game has a _different special ability_ that the Duelist can use.\n\nThe Duelist also starts with _two throwing spikes_, cloth armor, a waterskin, and a velvet pouch.\n\nThe Duelist automatically identifies:\n_-_ Scrolls of Identify\n_-_ Potions of Strength\n_-_ Scrolls of Mirror Image
+actors.hero.heroclass.duelist_desc=The Duelist starts with a _unique rapier_ with a special ability that recharges over time.\n\nEvery weapon in the game has a _different special ability_ that the Duelist can use.\n\nThe Duelist also starts with _two throwing spikes_, cloth armor, a waterskin, and a velvet pouch.\n\nThe Duelist automatically identifies:\n_-_ Scrolls of Identify\n_-_ Potions of Strength\n_-_ Scrolls of Trauma
 actors.hero.heroclass.duelist_unlock=To unlock the Duelist _equip a tier 2 or higher weapon with no strength penalty._
 
 actors.hero.herosubclass.berserker=berserker
