--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -451,7 +451,16 @@ items.artifacts.unstablespellbook.desc_index=The book is incomplete. Its index i
 items.artifacts.unstablespellbook.desc_empowered=The scrolls that you've added to the book are glowing with power. You will be able to choose the exotic version of these scroll's effects, but at the cost of an additional charge.
 items.artifacts.unstablespellbook.read_empowered=The scroll you added to the spellbook surges with energy. You are able to channel either the regular, or exotic version of this scroll's effect.\n\nChoosing the exotic variant will cost 2 charges instead of 1.
 
-
+items.artifacts.bloodorb.name=orb of sacrifice
+items.artifacts.bloodorb.ac_cast=CAST
+items.artifacts.bloodorb.cursed=You can't use a cursed orb.
+items.artifacts.bloodorb.does_nothing=That won't do anything.
+items.artifacts.bloodorb.cant_reach=Your orb can't reach there.
+items.artifacts.bloodorb.prompt=Choose a location to target.
+items.artifacts.bloodorb.desc=This sinister looking glass orb has a big crack in its surface. Around its sharp edges an unsettling amount of blood is dripping out.
+items.artifacts.bloodorb.desc_cursed=The cursed orb has forced itself onto your skin, constantly trying to wound you.
+items.artifacts.bloodorb.desc_equipped=Targeting a location will emit an explosion of blood, hemorrhaging all who stand close by. At a cost of your own blood, of course. The burst is strongest in the center. The orb grows stronger with each drop of blood you sacrifice to it.\n\nAtrifact levelup is most efficient at low health.
+items.artifacts.bloodorb.levelup=Your orb has drained enough of your blood to get stronger!
 
 ###bags
 items.bags.bag.name=backpack
@@ -920,7 +929,7 @@ items.rings.ringofhaste.typical_stats=When worn, this ring will typically increa
 items.rings.ringofhaste.desc=This ring reduces the stress of movement on the wearer, allowing them to run at superhuman speeds. A cursed ring will instead weigh the wearer down.
 
 items.rings.ringofmight.name=ring of might
-items.rings.ringofmight.stats=When worn, this ring will increase your strength by _%1$d_ and your max HP by _%2$s%%._
+items.rings.ringofmight.stats=When worn, this ring will increase your strength by _1_ and your max HP by _%2$s%%._
 items.rings.ringofmight.typical_stats=When worn, this ring will typically increase your strength by _%1$d_ and your max HP by _%2$s%%._
 items.rings.ringofmight.desc=This ring enhances the physical traits of the wearer, granting them greater physical strength and constitution. A cursed ring will weaken the wearer.
 
@@ -955,6 +964,7 @@ items.scrolls.scroll.naudiz=scroll of NAUDIZ
 items.scrolls.scroll.berkanan=scroll of BERKANAN
 items.scrolls.scroll.odal=scroll of ODAL
 items.scrolls.scroll.tiwaz=scroll of TIWAZ
+items.scrolls.scroll.jera=scroll of JERA
 items.scrolls.scroll.unknown_desc=An indecipherable magical rune is written on this parchment. Who knows what it will do when read aloud?
 items.scrolls.scroll.blinded=You can't read a scroll while blinded.
 items.scrolls.scroll.no_magic=You can't read a scroll while magic immune.
@@ -1015,6 +1025,10 @@ items.scrolls.scrollofterror.one=The scroll emits a brilliant flash of red light
 items.scrolls.scrollofterror.many=The scroll emits a brilliant flash of red light and the monsters flee!
 items.scrolls.scrollofterror.desc=When read, this scroll will emit a flash of red light that will overwhelm all enemies in your field of view with terror, and they will turn and flee. Attacking a fleeing enemy will shorten the effect.
 
+items.scrolls.scrolloftrauma.name=scroll of trauma
+items.scrolls.scrolloftrauma.light=The scroll emits a brilliant flash of violet light.
+items.scrolls.scrolloftrauma.desc=When read, this scroll will emit a flash of violet light that will curse the minds of creatures that witness it, causing them to be less effective in combat.
+
 items.scrolls.scrolloftransmutation.name=scroll of transmutation
 items.scrolls.scrolloftransmutation.inv_title=Transmute an item
 items.scrolls.scrolloftransmutation.nothing=Nothing interesting happens.
@@ -1042,6 +1056,7 @@ items.scrolls.exotic.exoticscroll.naudiz=exotic scroll of NAUDIZ
 items.scrolls.exotic.exoticscroll.berkanan=exotic scroll of BERKANAN
 items.scrolls.exotic.exoticscroll.odal=exotic scroll of ODAL
 items.scrolls.exotic.exoticscroll.tiwaz=exotic scroll of TIWAZ
+items.scrolls.exotic.exoticscroll.jera=exotic scroll of JERA
 items.scrolls.exotic.exoticscroll.unknown_desc=A glowing indecipherable magical rune is written on this black parchment. It seems to be foreign to this land, who knows what it will do when read aloud?
 
 items.scrolls.exotic.scrollofsirenssong.name=scroll of siren's song
@@ -1067,6 +1082,9 @@ items.scrolls.exotic.scrollofdivination$wnddivination.desc=Your scroll of divina
 
 items.scrolls.exotic.scrollofdread.name=scroll of dread
 items.scrolls.exotic.scrollofdread.desc=When read, this scroll will emit a flash of red light that will instill incredible terror in all enemies in your field of view. So great is this effect that they will rapidly try to flee from the entire dungeon, never to be seen again!\n\nJust like with terror, this effect can expire with time, or if the enemy is attacked.\n\nStrong-willed enemies, such as bosses, will be inflicted with regular terror instead.
+
+items.scrolls.exotic.scrollofdamnation.name=scroll of damnation
+items.scrolls.exotic.scrollofdamnation.desc=When read, this scroll will inflict doom on those unfortunate enough to witness. Doomed enemies take more damage from all sources, and its effects only end in death.\n\nParticularly strong enemies are inflicted with hex instead.
 
 items.scrolls.exotic.scrollofenchantment.name=scroll of enchantment
 items.scrolls.exotic.scrollofenchantment.inv_title=Enchant an item
@@ -1185,6 +1203,15 @@ items.spells.telekineticgrab.desc=This spell allows the caster to remotely grab 
 
 items.spells.wildenergy.name=wild energy
 items.spells.wildenergy.desc=This spell contains some of the cursed energy which powered DM-300. When cast, it will recharge your wands and worn artifacts, while also triggering a random cursed wand effect. You are able to choose a direction for this cursed magic to shoot in, however.
+
+items.spells.prismaticimagespell.name=prismatic image
+items.spells.prismaticimagespell.desc=Conjure a prismatic image to aid you in combat.
+
+items.spells.transfiguration.name=shifting lands
+items.spells.transfiguration.desc=This chaotic spell will transform the dungeon floor around you when cast.\n\nWater turns into grass, grass into high grass, high grass into embers and embers into water. Can also be used to destroy bookshelves and barriers.
+
+items.spells.magicbridge.name=magical bridge
+items.spells.magicbridge.desc=This spell is able to create walkable floor where there is none.
 
 
 ###runestones
@@ -1394,6 +1421,20 @@ items.wands.wandofwarding$ward.dismiss_body=You can dispel this ward if you no l
 items.wands.wandofwarding$ward.dismiss_confirm=yes
 items.wands.wandofwarding$ward.dismiss_cancel=no
 
+items.wands.wandofchaos.name=wand of chaos
+items.wands.wandofchaos.staff_name=staff of chaos
+items.wands.wandofchaos.desc=This wand is made from two interconnected crystals, pulsating in an unsettling, unpredictable way. It glows with chaotic energy, waiting to shoot forward.
+items.wands.wandofchaos.stats_desc=This wand shoots a beam that pierces terrain, will go farther the more it is upgraded, and will apply random debuffs to enemies hit, dealing _%1$d-%2$d damage._
+items.wands.wandofchaos.bmage_desc=_the Battlemage_ conjures powerful buffs upon killing enemies with a staff of chaos.
+items.wands.wandofchaos.eleblast_desc=an elemental blast with a staff of chaos deals 67% damage, and inflicts enemies hit with the Hex debuff.
+
+items.wands.wandofcosmictravel.name=wand of cosmic travel
+items.wands.wandofcosmictravel.staff_name=staff of cosmic travel
+items.wands.wandofcosmictravel.desc=This wand feels like a cold rod of solid glass, but seems to hold a reflection of the cosmos itself. As you turn it in your hand, Visions of distant places rush through your head.
+items.wands.wandofcosmictravel.stats_desc=This wand shoots a beam that collides with the first enemy hit, and swaps it's place with the caster's, dealing _%1$d-%2$d damage._ Immobile units hit will suffer bonus damage instead of being teleported.
+items.wands.wandofcosmictravel.bmage_desc=When _the Battlemage_ strikes an enemy with a Staff of cosmic travel, he has a chance to swap places with the attacked enemy, and deals bonus damage to immobile targets.
+items.wands.wandofcosmictravel.eleblast_desc=an elemental blast with a staff of cosmic travel deals 50% damage, and teleports all enemies hit across the dungeon floor.
+
 ###weapon curses
 items.weapon.curses.annoying.name=annoying %s
 items.weapon.curses.annoying.msg_1=OOH, ARE WE FIGHTING SOMETHING!?
@@ -1404,7 +1445,7 @@ items.weapon.curses.annoying.msg_5=OUCH, DON'T SWING ME SO HARD!
 items.weapon.curses.annoying.msg_6=DIE, INSECT!
 items.weapon.curses.annoying.msg_7=WHEEEEEEEEEEEEEEE!
 items.weapon.curses.annoying.msg_8=CAN WE TAKE A BREAK!?
-items.weapon.curses.annoying.msg_9=POW, HAHA!
+items.weapon.curses.annoying.msg_9=YEP, COCK!
 items.weapon.curses.annoying.msg_10=WELL STRUCK!
 items.weapon.curses.annoying.msg_11=I didn't want to be a weapon, I wanted to be a lumberjack's axe.
 items.weapon.curses.annoying.msg_12=Remember, overconfidence is a slow and insidious killer.
@@ -1783,6 +1824,12 @@ items.weapon.missiles.darts.rotdart.desc=These wicked darts are tipped with an a
 
 items.weapon.missiles.darts.shockingdart.name=shocking dart
 items.weapon.missiles.darts.shockingdart.desc=These darts are tipped with a stormvine-based compound which will deliver a nasty shock to their target.
+
+items.weapon.missiles.darts.voiddart.name=void dart
+items.weapon.missiles.darts.voiddart.desc=These darts are tipped with a voidpearl-based compound which will damage their target.
+
+items.weapon.missiles.darts.ghostdart.name=ghost dart
+items.weapon.missiles.darts.ghostdart.desc=These darts are tipped with a ghostbulb-based compound which spawn copies of both the user and the target.
 
 items.weapon.missiles.darts.tippeddart.ac_clean=CLEAN
 items.weapon.missiles.darts.tippeddart.clean_title=Clean Darts
