--- a/core/src/main/assets/messages/plants/plants.properties
+++ b/core/src/main/assets/messages/plants/plants.properties
@@ -4,7 +4,7 @@ plants.blandfruitbush$seed.name=seed of blandfruit
 
 plants.blindweed.name=blindweed
 plants.blindweed.desc=Upon being touched a blindweed perishes in a bright flash of light. The flash is strong enough to disorient for several seconds.
-plants.blindweed.warden_desc=_The Warden_ will channel a blindweed's energy into a temporary shroud of invisibility, instead of being disoriented.
+plants.blindweed.warden_desc=_The Warden_ will channel a blindweed's energy into a temporary light source, instead of being disoriented.
 plants.blindweed$seed.name=seed of blindweed
 
 plants.mageroyal.name=mageroyal
@@ -74,3 +74,15 @@ plants.swiftthistle.warden_desc=In addition to gaining instantaneous actions, _t
 plants.swiftthistle$seed.name=seed of swiftthistle
 plants.swiftthistle$timebubble.name=time bubble
 plants.swiftthistle$timebubble.desc=A small bubble of accelerated time, allowing actions to be performed instantly. Attacking or using magic will break this effect however.\n\nTurns remaining: %s.
+
+plants.voidpearl.name=voidpearl
+plants.voidpearl.desc=Long thought to be extinct, this plant is exceedingly rare to come across. Anything that comes into contact with the voidpearl will be forever lost to the void.
+plants.voidpearl.warden_desc=_The Warden_ is able to resist the effects of the voidpearl, and lets all debuffs affecting her to be consumed instead.
+plants.voidpearl$seed.name=seed of voidpearl
+plants.voidpearl.ondeath=the voidpearl consumes your existence
+plants.voidpearl.rankings_desc=Consumed by the void
+
+plants.ghostbulb.name=ghostbulb
+plants.ghostbulb.desc=the translucent bulbs growing on top of this plant linger silently in the air. Touching this plant causes the bulbs to form into a ghostly ally.
+plants.ghostbulb.warden_desc=_The Warden_ forms an additional mirror image when using the plant, and becomes invisible to blend in with the ghosts.
+plants.ghostbulb$seed.name=seed of ghostbulb
