revert package name, fix changelist rune table sprite

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ allprojects {
 
     ext {
         appName = 'Elektrocheckers Pixel Dungeon'
-        appPackageName = 'com.elektrochecker.pixeldungeonalchemistmod'
+        appPackageName = 'com.elektrochecker.shatteredpixeldungeonT'
 
         appVersionCode = 768
         appVersionName = '2.3.2T3.3'
