ancient rune infrastructure

--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -2098,3 +2098,26 @@ items.waterskin.desc=A container for liquid, made from leather and string, seale
 items.waterskin.desc_water=Right now the waterskin just contains some plain drinking water. Surely there is something in the dungeon that the waterskin could store instead.
 items.waterskin.desc_heal=The waterskin is currently being used to store healing water. The more full the waterskin is, the more you will be instantly healed when drinking from it. You will only drink as much as you need.
 items.waterskin.desc_full=The full waterskin seems to radiate energy, perhaps it can be used to bless another survival item?
+
+
+#ancient runes
+items.ancientrunes.ancientrune.no_magic=Not even the ancient rune seems to overcome the effects of anti-magic.
+items.ancientrunes.ancientrune.ac_cast=USE
+
+items.ancientrunes.nabla.name=Ancient rune of nabla
+items.ancientrunes.nabla.desc=
+
+items.ancientrunes.covariant.name=Covariant ancient rune
+items.ancientrunes.covariant.desc=
+
+items.ancientrunes.contravariant.name=Contravariant ancient rune
+items.ancientrunes.contravariant.desc=
+
+items.spells.invariant.name=Invariant ancient rune
+items.spells.invariant.desc=
+
+items.ancientrunes.fieldoperator.name=Ancient rune of field annihilation
+items.ancientrunes.fieldoperator.desc=
+
+items.ancientrunes.partial.name=Partial ancient rune
+items.ancientrunes.partial.desc=
