invariant ancient rune

--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -2104,20 +2104,19 @@ items.waterskin.desc_full=The full waterskin seems to radiate energy, perhaps it
 items.ancientrunes.ancientrune.no_magic=Not even the ancient rune seems to overcome the effects of anti-magic.
 items.ancientrunes.ancientrune.ac_cast=USE
 
-items.ancientrunes.nabla.name=Ancient rune of nabla
-items.ancientrunes.nabla.desc=
+items.ancientrunes.nablaancientrune.name=Ancient rune of nabla
+items.ancientrunes.nablaancientrune.desc=The _Ancient Rune of Nabla_ transmutes a piece of equipment, lowering its tier by 1. The targeted equipment can be enchanted with an enchantment of choice.
 
-items.ancientrunes.covariant.name=Covariant ancient rune
-items.ancientrunes.covariant.desc=
+items.ancientrunes.covariantancientrune.name=Covariant ancient rune
+items.ancientrunes.covariantancientrune.desc=Without consuming: Transmute another ancient rune into _Contravariant Ancient Rune_.\n\nCombine with _Contravariant Ancient Rune_ to create _Invariant Ancient Rune_.
+items.ancientrunes.contravariantancientrune.name=Contravariant ancient rune
+items.ancientrunes.contravariantancientrune.desc=Without consuming: Transmute another ancient rune into _Covariant Ancient Rune_.\n\nCombine with _Covariant Ancient Rune_ to create _Invariant Ancient Rune_.
 
-items.ancientrunes.contravariant.name=Contravariant ancient rune
-items.ancientrunes.contravariant.desc=
+items.spells.invariantancientrune.name=Invariant ancient rune
+items.spells.invariantancientrune.desc=Upgrade target item by _+3_ levels. All other properties of the item are preserved.
 
-items.spells.invariant.name=Invariant ancient rune
-items.spells.invariant.desc=
+items.ancientrunes.fieldoperatorancientrune.name=Ancient rune of field annihilation
+items.ancientrunes.fieldoperatorancientrune.desc=The _Ancient Rune of Field Annihilation_ deals massive damage to a targeted enemy. Boss enemies can be targeted.
 
-items.ancientrunes.fieldoperator.name=Ancient rune of field annihilation
-items.ancientrunes.fieldoperator.desc=
-
-items.ancientrunes.partial.name=Partial ancient rune
-items.ancientrunes.partial.desc=
+items.ancientrunes.partialancientrune.name=Partial ancient rune
+items.ancientrunes.partialancientrune.desc=The _Partial Ancient Rune_ destroys a targeted exotic consumable and creates three instances of its non-exotic counterpart.\n\nPowerful items will only yield two consumables.
