co & contravariant runes

--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -2103,6 +2103,8 @@ items.waterskin.desc_full=The full waterskin seems to radiate energy, perhaps it
 #ancient runes
 items.ancientrunes.ancientrune.no_magic=Not even the ancient rune seems to overcome the effects of anti-magic.
 items.ancientrunes.ancientrune.ac_cast=USE
+items.ancientrunes.ancientruneinventory.no_magic=Not even the ancient rune seems to overcome the effects of anti-magic.
+items.ancientrunes.ancientruneinventory.ac_cast=USE
 
 items.ancientrunes.nablaancientrune.name=Ancient rune of nabla
 items.ancientrunes.nablaancientrune.desc=The _Ancient Rune of Nabla_ transmutes a piece of equipment, lowering its tier by 1. The targeted equipment can be enchanted with an enchantment of choice.
