--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -2105,9 +2105,11 @@ items.ancientrunes.ancientrune.no_magic=Not even the ancient rune seems to overc
 items.ancientrunes.ancientrune.ac_cast=USE
 items.ancientrunes.ancientruneinventory.no_magic=Not even the ancient rune seems to overcome the effects of anti-magic.
 items.ancientrunes.ancientruneinventory.ac_cast=USE
+items.ancientrunes.ancientrunetargeted.prompt=select target
 
 items.ancientrunes.nablaancientrune.name=Ancient rune of nabla
-items.ancientrunes.nablaancientrune.desc=The _Ancient Rune of Nabla_ transmutes a piece of equipment, lowering its tier by 1. The targeted equipment can be enchanted with an enchantment of choice.
+items.ancientrunes.nablaancientrune.desc=The _Ancient Rune of Nabla_ transmutes a piece of equipment. The targeted equipment will be enchanted with a _rare_ glyph or enchantment, which will be _hardened_.\n\nMelee weapons will be transmuted into a weapon that is one tier lower.
+items.ancientrunes.nablaancientrune.morph=Your item transforms into something different
 
 items.ancientrunes.covariantancientrune.name=Covariant ancient rune
 items.ancientrunes.covariantancientrune.desc=Without consuming: Transmute another ancient rune into _Contravariant Ancient Rune_.\n\nCombine with _Contravariant Ancient Rune_ to create _Invariant Ancient Rune_.
