greater transmutation spell

--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -1251,6 +1251,12 @@ items.spells.transfiguration.desc=This chaotic spell will transform the dungeon 
 items.spells.magicbridge.name=magical bridge
 items.spells.magicbridge.desc=This spell is able to create walkable floor where there is none.
 
+items.spells.greatertransmutation.name=greater transmutation
+items.spells.greatertransmutation.desc=A more powerful transmutation spell that is capable of transforming even ancient runes.
+items.spells.greatertransmutation.morph=Your item morphs into something different!
+items.spells.greatertransmutation.inv_title=Transmute an item
+items.spells.greatertransmutation.nothing=Nothing interesting happens.
+
 
 ###runestones
 items.stones.inventorystone.ac_use=USE
@@ -2109,7 +2115,7 @@ items.ancientrunes.ancientrunetargeted.prompt=select target
 
 items.ancientrunes.nablaancientrune.name=Ancient rune of nabla
 items.ancientrunes.nablaancientrune.desc=The _Ancient Rune of Nabla_ transmutes a piece of equipment. The targeted equipment will be enchanted with a _rare_ glyph or enchantment, which will be _hardened_.\n\nMelee weapons will be transmuted into a weapon that is one tier lower.
-items.ancientrunes.nablaancientrune.morph=Your item transforms into something different
+items.ancientrunes.nablaancientrune.morph=Your item morphs into something different!
 
 items.ancientrunes.covariantancientrune.name=Covariant ancient rune
 items.ancientrunes.covariantancientrune.desc=Without consuming: Transmute another ancient rune into _Contravariant Ancient Rune_.\n\nCombine with _Contravariant Ancient Rune_ to create _Invariant Ancient Rune_.
