ancient rune qol & effects

--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -2126,7 +2126,10 @@ items.spells.invariantancientrune.name=Invariant ancient rune
 items.spells.invariantancientrune.desc=Upgrade target item by _+3_ levels. All other properties of the item are preserved.
 
 items.ancientrunes.fieldoperatorancientrune.name=Ancient rune of field annihilation
-items.ancientrunes.fieldoperatorancientrune.desc=The _Ancient Rune of Field Annihilation_ deals massive damage to a targeted enemy. Boss enemies can be targeted.
+items.ancientrunes.fieldoperatorancientrune.desc=The _Ancient Rune of Field Annihilation_ cures the hero fully, healing them and removing all negative effects as well as satisfying hunger.
 
 items.ancientrunes.partialancientrune.name=Partial ancient rune
 items.ancientrunes.partialancientrune.desc=The _Partial Ancient Rune_ destroys a targeted exotic consumable and creates three instances of its non-exotic counterpart.\n\nPowerful items will only yield two consumables.
+
+items.ancientrunes.laplaceancientrune.name=ancient rune of laplace
+items.ancientrunes.laplaceancientrune.desc=The _Ancient Rune of Laplace_ destroys a targeted regular consumable and creates three instances of its exotic counterpart.\n\nPowerful items will only yield two consumables.
