existence & propagation rune

--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -2114,7 +2114,7 @@ items.ancientrunes.ancientruneinventory.ac_cast=USE
 items.ancientrunes.ancientrunetargeted.prompt=select target
 
 items.ancientrunes.nablaancientrune.name=Ancient rune of nabla
-items.ancientrunes.nablaancientrune.desc=The _Ancient Rune of Nabla_ transmutes a piece of equipment. The targeted equipment will be enchanted with a _rare_ glyph or enchantment, which will be _hardened_.\n\nMelee weapons will be transmuted into a weapon that is one tier lower.
+items.ancientrunes.nablaancientrune.desc=The _Ancient Rune of Nabla_ transmutes a piece of equipment. The targeted equipment will be enchanted with a glyph or enchantment, which will be _hardened_ and has a high chance to be a powerful enchantment.
 items.ancientrunes.nablaancientrune.morph=Your item morphs into something different!
 
 items.ancientrunes.covariantancientrune.name=Covariant ancient rune
@@ -2125,11 +2125,20 @@ items.ancientrunes.contravariantancientrune.desc=Without consuming: Transmute an
 items.spells.invariantancientrune.name=Invariant ancient rune
 items.spells.invariantancientrune.desc=Upgrade target item by _+3_ levels. All other properties of the item are preserved.
 
-items.ancientrunes.fieldoperatorancientrune.name=Ancient rune of field annihilation
-items.ancientrunes.fieldoperatorancientrune.desc=The _Ancient Rune of Field Annihilation_ cures the hero fully, healing them and removing all negative effects as well as satisfying hunger.
+items.ancientrunes.fieldoperatorancientrune.name=Ancient rune of the field
+items.ancientrunes.fieldoperatorancientrune.desc=The _Ancient Rune of the Field_ cures the hero fully, healing them and removing all negative effects as well as satisfying hunger.
 
 items.ancientrunes.partialancientrune.name=Partial ancient rune
 items.ancientrunes.partialancientrune.desc=The _Partial Ancient Rune_ destroys a targeted exotic consumable and creates three instances of its non-exotic counterpart.\n\nPowerful items will only yield two consumables.
 
 items.ancientrunes.laplaceancientrune.name=ancient rune of laplace
 items.ancientrunes.laplaceancientrune.desc=The _Ancient Rune of Laplace_ destroys a targeted regular consumable and creates three instances of its exotic counterpart.\n\nPowerful items will only yield two consumables.
+
+items.ancientrunes.propagationancientrune.name=ancient rune of propagation
+items.ancientrunes.propagationancientrune.desc=The _Ancient rune of Propagation_ mentally advances the user, granting them bonus talent points. _1_ Talent point will be gained for _tier-1_ Talents, _2_ for _tier-2_ and so on.\n\nPotions of divine inspiration will _no longer take effect_ on talents above _tier-1_. 
+
+items.ancientrunes.commutatorancientrune.name=ancient rune of commutation
+items.ancientrunes.commutatorancientrune.desc=
+
+items.ancientrunes.existenceancientrune.name=ancient rune of existence
+items.ancientrunes.existenceancientrune.desc=The _Ancient rune of Existence_ conjures a piece of equipment, which is guaranteed to be upgraded.\n\nThe Quality of the equipment depends on the region where the rune is used, having a higher chance of additional upgrades or a higher tier when used deep in the dungeon.\n\nAdditional upgrade chances:\nsewers: _20%_\nprison: _40%_\ncaves: _60%_\nmetropolis: _80%_\nhalls: _100%_
