--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -1589,6 +1589,10 @@ items.weapon.enchantments.vampiric.name=vampiric %s
 items.weapon.enchantments.vampiric.desc=This powerful enchantment leeches life force from enemies with each blow, funneling it back into the wearer. The effect is stronger the lower the wearer's health.
 items.weapon.enchantments.vampiric.elestrike_desc=An elemental strike with a vampiric enchantment heals the Duelist for 2.5 HP for each enemy in range.
 
+items.weapon.enchantments.corroding.name=corroding %s
+items.weapon.enchantments.corroding.desc=This powerful enchantment injects corrosive chemicals into the enemy, inflicting corrosion.
+items.weapon.enchantments.corroding.elestrike_desc=An elemental strike with a corroding enchantment spreads corrosive gas to the affected area.
+
 
 ###melee weapons
 items.weapon.melee.assassinsblade.name=assassin's blade
