cracked geode artifact

--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -465,6 +465,20 @@ items.artifacts.bloodorb.desc_cursed=The cursed orb has forced itself onto your 
 items.artifacts.bloodorb.desc_equipped=Targeting a location will emit an explosion of blood, hemorrhaging all who stand close by. At a cost of your own blood, of course. The burst is strongest in the center. The orb grows stronger with each drop of blood you sacrifice to it.\n\nAtrifact levelup is most efficient at low health.
 items.artifacts.bloodorb.levelup=Your orb has drained enough of your blood to get stronger!
 
+items.artifacts.crackedgeode.name=cracked geode
+items.artifacts.crackedgeode.ac_cast=CAST
+items.artifacts.crackedgeode.ac_add=ADD
+items.artifacts.crackedgeode.no_charge=Your geode is out of energy for now.
+items.artifacts.crackedgeode.cursed=You cannot cast spells from a cursed geode.
+items.artifacts.crackedgeode.prompt=Select a Spell
+items.artifacts.crackedgeode.infuse_spell=You gently insert the spell crystal into the geode.
+items.artifacts.crackedgeode.unable_spell=You are unable to add this spell to the geode.
+items.artifacts.crackedgeode.unknown_spell=You're not sure what type of spell this is yet.
+items.artifacts.crackedgeode.desc=Despite the condition of this geode, the crystals inside are still intact. Staring at them for a while, it seems as if they were very similar to the spell crystals described in your alchemy lexicon, and almost as if they were visibly growing. Breaking off one of these crystals allows you to cast it as a spell.
+items.artifacts.crackedgeode.desc_cursed=The cursed geode has bound itself to you, it is inhibiting your ability to use most spells. (WIP)
+items.artifacts.crackedgeode.desc_index=The geode can be upgraded by attaching spell crystals to it. Following spell crystals would fit perfectly into the space between the crystals:
+items.artifacts.crackedgeode.curr_spell=The next crystal that will break off is the spell _%s_.
+
 ###bags
 items.bags.bag.name=backpack
 
