--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -468,16 +468,20 @@ items.artifacts.bloodorb.levelup=Your orb has drained enough of your blood to ge
 items.artifacts.crackedgeode.name=cracked geode
 items.artifacts.crackedgeode.ac_cast=CAST
 items.artifacts.crackedgeode.ac_add=ADD
+items.artifacts.crackedgeode.ac_destroy=DESTROY
 items.artifacts.crackedgeode.no_charge=Your geode is out of energy for now.
 items.artifacts.crackedgeode.cursed=You cannot cast spells from a cursed geode.
 items.artifacts.crackedgeode.prompt=Select a Spell
 items.artifacts.crackedgeode.infuse_spell=You gently insert the spell crystal into the geode.
 items.artifacts.crackedgeode.unable_spell=You are unable to add this spell to the geode.
 items.artifacts.crackedgeode.unknown_spell=You're not sure what type of spell this is yet.
-items.artifacts.crackedgeode.desc=Despite the condition of this geode, the crystals inside are still intact. Staring at them for a while, it seems as if they were very similar to the spell crystals described in your alchemy lexicon, and almost as if they were visibly growing. Breaking off one of these crystals allows you to cast it as a spell.
-items.artifacts.crackedgeode.desc_cursed=The cursed geode has bound itself to you, it is inhibiting your ability to use most spells. (WIP)
+items.artifacts.crackedgeode.desc=Despite the condition of this geode, the crystals inside are still intact. Staring at them for a while, it seems as if they were very similar to the spell crystals described in your alchemy lexicon, and almost as if they were visibly growing.\nBreaking off one of these crystals allows you to cast it as a spell, or you can destroy it and try to gain some alchemical energy.
+items.artifacts.crackedgeode.desc_cursed=The cursed geode has bound itself to you, it is inhibiting your ability to use most spells.
 items.artifacts.crackedgeode.desc_index=The geode can be upgraded by attaching spell crystals to it. Following spell crystals would fit perfectly into the space between the crystals:
 items.artifacts.crackedgeode.curr_spell=The next crystal that will break off is the spell _%s_.
+items.artifacts.crackedgeode.used_spell=You used the geode to cast the spell %s.
+items.artifacts.crackedgeode.destr_spell=You destroyed the spell %s.
+items.artifacts.crackedgeode.cursed_spells=Your geode prevents you from casting the spell.
 
 ###bags
 items.bags.bag.name=backpack
