add more basic projectile spells

--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -480,7 +480,7 @@ items.artifacts.crackedgeode.desc_cursed=The cursed geode has bound itself to yo
 items.artifacts.crackedgeode.desc_index=The geode can be upgraded by attaching spell crystals to it. Following spell crystals would fit perfectly into the space between the crystals:
 items.artifacts.crackedgeode.curr_spell=The next crystal that will break off is the spell _%s_.
 items.artifacts.crackedgeode.used_spell=You used the geode to cast the spell %s.
-items.artifacts.crackedgeode.destr_spell=You destroyed the spell %s.
+items.artifacts.crackedgeode.destr_spell=You destroyed the %s crystal.
 items.artifacts.crackedgeode.cursed_spells=Your geode prevents you from casting the spell.
 
 ###bags
@@ -1274,6 +1274,18 @@ items.spells.greatertransmutation.desc=A more powerful transmutation spell that 
 items.spells.greatertransmutation.morph=Your item morphs into something different!
 items.spells.greatertransmutation.inv_title=Transmute an item
 items.spells.greatertransmutation.nothing=Nothing interesting happens.
+
+items.spells.flameshot.name=flame burst
+items.spells.flameshot.desc=A projectile that ignites a fire at its destination. Does not work in water.
+
+items.spells.iceshot.name=ice wave
+items.spells.iceshot.desc=A projectile that chills the air around the target to sub-zero temperatures. More effective against enemies standing in water.
+
+items.spells.venomshot.name=venomous shot
+items.spells.venomshot.desc=A projectile that poisons the enemy.
+
+items.spells.vampiricshot.name=vampiric bolt
+items.spells.vampiricshot.desc=A projectile that deals damage and heals the user. Healing can only be gained from living enemies.
 
 
 ###runestones
