--- a/core/src/main/assets/messages/items/items.properties
+++ b/core/src/main/assets/messages/items/items.properties
@@ -1285,7 +1285,7 @@ items.spells.venomshot.name=venomous shot
 items.spells.venomshot.desc=A projectile that poisons the enemy.
 
 items.spells.vampiricshot.name=vampiric bolt
-items.spells.vampiricshot.desc=A projectile that deals damage and heals the user. Healing can only be gained from living enemies.
+items.spells.vampiricshot.desc=A projectile that deals damage and heals the user. Healing can only be gained from enemies that bleed.
 
 
 ###runestones
@@ -2160,7 +2160,7 @@ items.spells.invariantancientrune.name=Invariant ancient rune
 items.spells.invariantancientrune.desc=Upgrade target item by _+3_ levels. All other properties of the item are preserved.
 
 items.ancientrunes.fieldoperatorancientrune.name=Ancient rune of the field
-items.ancientrunes.fieldoperatorancientrune.desc=The _Ancient Rune of the Field_ cures the hero fully, healing them and removing all negative effects as well as satisfying hunger.
+items.ancientrunes.fieldoperatorancientrune.desc=The _Ancient Rune of the Field_ cures the hero fully, healing them and removing all negative effects as well as satisfying hunger. In addition _1_ point of strength will be gained permanently.
 
 items.ancientrunes.partialancientrune.name=Partial ancient rune
 items.ancientrunes.partialancientrune.desc=The _Partial Ancient Rune_ destroys a targeted exotic consumable and creates three instances of its non-exotic counterpart.\n\nPowerful items will only yield two consumables.
